add css to the html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </p>
       </div>
 
-      <div>
-        <h5>Preparation time</h5>
+      <div class="time">
+        <h5 class="title">Preparation time</h5>
 
         <ul>
           <li>Total: Approximately 10 minutes</li>
@@ -43,8 +43,8 @@
         </ul>
       </div>
 
-      <div>
-        <h5>Ingredients</h5>
+      <div class="ingredients">
+        <h4 class="title">Ingredients</h4>
         <ul>
           <li>2-3 large eggs</li>
           <li>Salt, to taste</li>
@@ -59,10 +59,10 @@
         </ul>
       </div>
 
-      <div>
-        <h5>Instructions</h5>
+      <div class="instructions">
+        <h4 class="title">Instructions</h4>
 
-        <ol>
+        <ol class="steps">
           <li>
             Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
             pepper until they are well mixed. You can add a tablespoon of water
@@ -96,12 +96,14 @@
       </div>
 
       <div>
-        <h5>Nutrition</h5>
+        <h4 class="title">Nutrition</h4>
 
-        The table below shows nutritional values per serving without the
-        additional fillings.
+        <p class="note">
+          The table below shows nutritional values per serving without the
+          additional fillings.
+        </p>
 
-        <table>
+        <table class="nutrition">
           <tbody>
             <tr>
               <td>Calories</td>
